# langchain-document-agent

./: .gitignore  README.md  app.py  evaluation_results.csv  pyproject.toml
data/: questions.csv
faiss_index/: index.faiss  index.pkl
notes/: langgraph_learnings.md
src/: agent.py  agent_qwen.py  agent_remove.py  config.py  embeddings.py  ingest.py  langgraph_demo.py  langgraph_rag_chain.py  langgraph_rag_chain_reranker.py  llm.py  pipeline.py  rag.py  tools.py  vector_store.py
tests/: test_agent.py  test_agent_executor.py  test_chunking.py  test_embeddings.py  test_env.py  test_evaluation.py  test_faiss.py  test_gemini.py  test_gemini_bkp.py  test_langgraph.py  test_langgraph_rag_chain.py  test_langgraph_rag_chain_reranker.py  test_metadata.py  test_pdf.py  test_rag.py  test_similarity_search.py  test_tools.py
