[tool.poetry]
name = "langchain-document-agent"
version = "0.1.0"
description = ""
authors = ["Sandy <7pandeys@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = ">=1.3.9,<2.0.0"
langchain-community = ">=0.4.2,<0.5.0"
faiss-cpu = ">=1.14.3,<2.0.0"
streamlit = ">=1.58.0,<2.0.0"
pypdf = ">=6.13.2,<7.0.0"
langchain-text-splitters = "^1.1.2"
langchain-google-genai = "^4.2.5"
sentence-transformers = "^5.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"